<resources>
    <string name="app_name">Medinet 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_riwayat">Riwayat</string>

    <string name="menu_beranda">Beranda</string>
    <string name="menu_Obat">Obat</string>
    <string name="menu_Biodata">Biodata</string>

    <string name="welcome">Selamat Datang</string>
    <string name="nama_pengguna">Bambang</string>
    <string name="saldo_judul">Saldo Kamu</string>
    <string name="saldoRp">Rp.</string>
    <string name="saldo_jumlah">100.000</string>
    <string name="topUp">Top Up</string>
    <string name="bayar">Bayar</string>
    <string name="kategor">Kategori Obat</string>
    <string name="covid_19">Covid-19</string>
    <string name="demam">Demam</string>
    <string name="sakitKepala">Sakit Kepala</string>
    <string name="flu">Flu</string>
    <string name="maag">Maag</string>
    <string name="other">Lainnya</string>
    <string name="rekomendasi">Rekomendasi Obat</string>
    <string name="imun">Perkuat Imun</string>

    <string name="title_kedaiObat">Kedai Obat</string>
    <string name="pembuka">Obat apa yang anda cari?</string>
    <string name="nama_bambang">Bambang Sulistio</string>
    <string name="email_bambang">bambang.sulis@gmail.com</string>
    <string name="berat_angka">79</string>
    <string name="tinggi_angka">165</string>
    <string name="usia_angka">21</string>
    <string name="berat_text">Berat</string>
    <string name="tinggi_text">Tinggi</string>
    <string name="usia_text">Usia</string>
    <string name="Biodata_title">Biodata</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="RB_laki_laki">Laki-Laki</string>
    <string name="RB_Perempuan">Perempuan</string>
    <string name="Akun_title">Akun</string>
    <string name="personal_tite">Data Personal</string>

    <string name="hapus_akun">Hapus Akun</string>
    <string name="tinggi">Tinggi</string>
    <string name="berat">Berat</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="ulang_password_baru">Ulang Password Baru</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_lama">Password Lama</string>
    <string name="number_default">0.0</string>
    <string name="lainnya">Lainnya</string>
    <string name="hai_selamat_datang">Hai Selamat Datang</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="support_by">Support By</string>
    <string name="nama_obat_default">IMBOOST FORCE 10 Kaplet</string>
    <string name="jumlah_jual_default">Per Strip</string>
    <string name="harga_default">80.000</string>
    <string name="Rupiah">Rp.</string>
    <string name="size_default">1</string>
    <string name="informasi_umum">Informasi Umum</string>
    <string name="desc_default">Obat ini adalah obat untuk menjaga stamina anda dalam beraktivitas untuk menjaga daya tahan tubuh</string>
    <string name="peringatan_default">Peringatan</string>
    <string name="perinagatan_default_txt">obat ini adalah obat untuk menjaga stamina anda dalam beraktivitas untuk menjaga daya tahan tubuh</string>
    <string name="dosis">Dosis</string>
    <string name="dosis_default">obat ini adalah obat untuk menjaga stamina anda dalam beraktivitas untuk menjaga daya tahan tubuh</string>
    <string name="harga">Harga</string>
    <string name="alamat">Alamat</string>
    <string name="masukan_alamat">Masukan alamat</string>
    <string name="catatan">Catatan</string>
    <string name="berikan_catatan">Berikan Catatan</string>
    <string name="metode_bayar">Metode Bayar</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="tunai">Tunai</string>
    <string name="dompet_default">RP 100.000</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="hai_selamat_datang_kembali">Hai Selamat Datang Kembali</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="supported_by">Supported By</string>
    <string name="riwayat">Riwayat</string>
    <string name="kedai_obat">Kedai Obat</string>
    <string name="sapaan">Obat apa yang anda cari ?</string>
    <string name="obat_default">IMBOOST FORCE 10 KAPLET</string>
    <string name="tambah">Tambah</string>
    <string name="jumlah_default">3</string>
    <string name="dompet">Dompet</string>
    <string name="top_up_cepat">Top Up Cepat</string>
    <string name="rp_25_000">Rp. 25.000</string>
    <string name="top_up">Top Up</string>
    <string name="nominal">Nominal</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="rp_100_000">Rp. 100.000</string>
    <string name="rp_200_000">Rp. 200.000</string>
    <string name="rp_250_000">Rp. 250.000</string>
    <string name="rp_300_000">Rp. 300.000</string>
</resources>