<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="162dp"
    android:layout_height="220dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="102dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_app_icon" />

        <TextView
            android:id="@+id/nama_obat"
            android:layout_width="116dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:lines="2"
            android:layout_marginTop="9dp"
            android:text="@string/nama_obat_default"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/jumlah_jual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/jumlah_jual_default"
            android:textColor="@color/Secondary_color"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tx_Rp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rupiah"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_default"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_tambah"
            android:layout_gravity="center_horizontal"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:text="@string/tambah"
            android:textSize="13sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>