<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Dompet_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewdompet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardBackgroundColor="@color/Primary_color"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgdompetPrev"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_title_dompet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/dompet"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewdompet" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardsaldo_dompet"
            android:layout_width="304dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/Primary_color"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_dompet">

            <LinearLayout
                android:id="@+id/saldo_monitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_baseline_credit_card_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/saldo_judul"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tx_beranda_saldoRp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saldoRp"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tx_beranda_saldo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saldo_jumlah"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/top_up_cepat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardsaldo_dompet" />

        <GridLayout
            android:id="@+id/grd_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:columnCount="2"
            android:rowCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_subtitle1">

            <androidx.cardview.widget.CardView
                android:id="@+id/saldo1"
                android:layout_width="117dp"
                android:layout_height="53dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/borderdompet">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rp_25_000"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/saldo2"
                android:layout_width="117dp"
                android:layout_height="53dp"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rp_50_000"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/saldo3"
                android:layout_width="117dp"
                android:layout_height="53dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/rp_100_000"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/saldo4"
                android:layout_width="117dp"
                android:layout_height="53dp"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rp_200_000"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/saldo5"
                android:layout_width="117dp"
                android:layout_height="53dp"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rp_250_000"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/saldo6"
                android:layout_width="117dp"
                android:layout_height="53dp"
                android:background="@drawable/card_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rp_300_000"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>
        </GridLayout>

        <TextView
            android:id="@+id/text_subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/top_up"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grd_saldo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nominal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/nominal"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_subtitle2">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etnominalDompet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnTopUpGas"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="Top Up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nominal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>