<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Detail_ObatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_margin="24dp"
            app:cardBackgroundColor="@color/Primary_color"
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgDetailPrev"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="215dp"
            android:layout_height="207dp"
            android:src="@drawable/ic_medi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="485dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvDetailJudul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/nama_obat_default"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDetailKeterangan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/jumlah_jual_default"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailJudul" />

                <LinearLayout
                    android:id="@+id/detai_harga_container"
                    android:orientation="horizontal"
                    android:layout_marginStart="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvDetailKeterangan"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rupiah"/>
                    <TextView
                        android:id="@+id/tvDetailHarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/harga_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailKeterangan">

                    <Button
                        android:id="@+id/btnKeranjangKurang"
                        android:layout_width="20dp"
                        android:layout_height="19dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_baseline_remove_circle_outline_24" />

                    <EditText
                        android:id="@+id/etKeranjangTotalObat"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:gravity="center"
                        android:text="@string/size_default"
                        android:textSize="11sp" />


                    <Button
                        android:id="@+id/btnKeranjangTambah"
                        android:layout_width="20dp"
                        android:layout_height="19dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_baseline_add_circle_outline_24" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvDetailInformasiUmumTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/informasi_umum"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detai_harga_container" />

                <TextView
                    android:id="@+id/tvDetailInformasiUmum"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/desc_default"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailInformasiUmumTitle" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/peringatan_default"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailInformasiUmum" />

                <TextView
                    android:id="@+id/tvDetailPeringatan"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/perinagatan_default_txt"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/dosis"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailPeringatan" />

                <TextView
                    android:id="@+id/tvDetailDetail"
                    android:layout_width="317dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/dosis_default"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDetailObatBeliSekarang"
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    app:cardCornerRadius="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailDetail">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:src="@drawable/ic_baseline_shopping_cart_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/harga"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvDetailHargaAkhir"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/number_default"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            app:layout_constraintTop_toBottomOf="@+id/textView7" />

                        <Button
                            android:id="@+id/btnDetailTambah"
                            android:layout_width="20dp"
                            android:layout_height="19dp"
                            android:layout_marginEnd="15dp"
                            android:background="@drawable/ic_baseline_add_circle_outline_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>